- var range improvements and better javadoc - small improvements on smoclassifier