@@ -32,66 +32,165 @@ import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 /**
- * Utility tool to ease the specification of selection of variables
- * based on lists or ranges of variable names.
- * Variable ranges can be specified directly as a list of variable indexes
- * or as a list of variable ranges.
+ * Variable names parser based on indexes, names, ranges or predicates. The purpose of this parser
+ * is to extract a concrete list of variable names based on a compact and flexible
+ * specification.
  * <p>
- * Variable ranges syntax uses as range separator "~", and as column
- * range delimiter the comma ",". Thus "a~d" means all the variables, starting
- * with variable a and ending with variable d, inclusive. A single variable
- * name is also a range.
+ * Often time, when we work with data frame, we want to specify a list of variables from that frame
+ * for further processing. The most direct way to do that would be to use a list of variable names.
+ * When data frames contains many variables this process is cumbersome, thus a more flexible way is
+ * necessary to simplify that. This class contains tools to simplify this process.
+ * <p>
+ * As an examples of simpler specifications:
+ * <ul>
+ *     <li>first 3 variables</li>
+ *     <li>last variable</li>
+ *     <li>from variable named <i>a</i> to variable named <code>d</code></li>
+ * </ul>
+ * <p>
+ * <p>
+ * Variable ranges syntax uses as range separator <code>~</code>, and as column
+ * range delimiter the comma <code>,</code>. For more insights we provide below some illustrative examples:
+ * <ul>
+ *     <li><code>a~d</code> all variables in the data frame starting with variable named <code>a</code> to variable named <code>d</code>,
+ *     inclusive</li>
+ *     <li><code>d</code>  only variable named `d`</li>
+ *     <li><code>0~3</code> first 4 variables in the data frame</li>
+ *     <li><code>1~4,a~d</code> variables found on indexes <code>1,2,3,4</code>, followed by variables starting with <code>a</code>
+ *     until <code>d</code></li>
+ *     <li><code>all</code> all variables, when this is the only specification</li>
+ * </ul>
+ * <p>
+ * Another way to specify how variable names are parsed is by using predicates. A predicate is an
+ * instance of {@link Predicate}. If the predicate has {@link String} as parametrized type, the
+ * predicate acts on variable names. If the predicate has {@link Var} as parametrized type, the
+ * predicate acts on the variable itself.
+ * <p>
+ * The predicates allow maximum flexibility but requires code. During parsing, the variables from
+ * the data frame are passed to the predicate and if the predicate returns true, the parser allows
+ * the variable in outcome.
+ * <p>
+ * Another way to parse variables from a data frame is by specifying a set of types. The parser
+ * will retain all the variables with types in the given list of allowed types.
  *
  * @author <a href="mailto:padreati@yahoo.com">Aurelian Tutuianu</a>
  */
-public interface VarRange {
+public abstract class VarRange {
+    public static final String DELIMITER = ",";
+    public static final String RANGE_SEPARATOR = "~";
+    public static final String ALL = "all";
 
-    static VarRange all() {
-        return new VarRangeByName(VarRangeByName.ALL);
+    /**
+     * Predicate which specifies all the columns found in the data frame in order
+     */
+    public static VarRange all() {
+        return new VarRangeByValues(ALL);
     }
 
-    static VarRange of(String... varNames) {
-        return new VarRangeByName(varNames);
+    /**
+     * String array of ranges. A range can be a variable name, a variable index, a range of indexes or variable names
+     * or even a list of ranges.
+     *
+     * @param ranges array of ranges
+     * @return parser instance
+     */
+    public static VarRange of(String... ranges) {
+        return new VarRangeByValues(ranges);
     }
 
-    static VarRange of(Collection<String> varNames) {
-        String[] names = new String[varNames.size()];
+    /**
+     * Collection with list of ranges
+     *
+     * @param ranges collection of ranges
+     * @return parser instance
+     */
+    public static VarRange of(Collection<String> ranges) {
+        String[] names = new String[ranges.size()];
         int i = 0;
-        for (String varName : varNames) {
+        for (String varName : ranges) {
             names[i++] = varName;
         }
-        return new VarRangeByName(names);
+        return new VarRangeByValues(names);
     }
 
-    static VarRange of(int... varIndexes) {
-        return new VarRangeByName(varIndexes);
+    /**
+     * List of variable indices.
+     *
+     * @param varIndices array of variable indices
+     * @return parser instance
+     */
+    public static VarRange of(int... varIndices) {
+        return new VarRangeByValues(varIndices);
     }
 
-    static VarRange byName(Predicate<String> filter) {
+    /**
+     * Select all the variables which has a name which pass the given predicate.
+     *
+     * @param filter variable name predicate
+     * @return parser instance
+     */
+    public static VarRange byName(Predicate<String> filter) {
         return new VarRangeByPredName(filter);
     }
 
-    static VarRange byFilter(Predicate<Var> filter) {
+    /**
+     * Select all the variables which pass the given predicate.
+     *
+     * @param filter variable predicate
+     * @return parser instance
+     */
+    public static VarRange byFilter(Predicate<Var> filter) {
         return new VarRangeByPred(filter);
     }
 
-    static VarRange onlyTypes(VarType... types) {
+    /**
+     * Select all the variables with types in the given list of types.
+     *
+     * @param types selected list of types
+     * @return parser instance
+     */
+    public static VarRange onlyTypes(VarType... types) {
         Set<VarType> keep = Arrays.stream(types).collect(Collectors.toSet());
         return new VarRangeByPred(var -> keep.contains(var.type()));
     }
 
-    List<Integer> parseVarIndexes(Frame df);
+    /**
+     * Apply {@link VarRange} over a frame and returns a list of variable indexes.
+     * A variable index is the position of the variable in the given frame.
+     * <p>
+     * If a variable is not found, then it will be omitted.
+     *
+     * @param df input data frame
+     * @return a list of variable indexes which corresponds to variable range
+     */
+    public abstract List<Integer> parseVarIndexes(Frame df);
 
-    List<String> parseVarNames(Frame df);
+    /**
+     * Apply {@link VarRange} over a frame and returns a list of variable names.
+     * <p>
+     * If a variable is not found, it will be ommited.
+     *
+     * @param df input data frame
+     * @return a list of variable names which corresponds to the variable range
+     */
+    public abstract List<String> parseVarNames(Frame df);
 
-    List<String> parseInverseVarNames(Frame df);
+    /**
+     * Apply {@link VarRange} over a frame and returns the list of complement variable names.
+     * A complement variable is a variable which is not described by variable range.
+     * <p>
+     * This is useful if you want to select all columns which does not meet a given condition.
+     * A common example is to split vertically a data frame into a data frame which contains
+     * the target variable and another one which contains all other variables.
+     *
+     * @param df input data frame
+     * @return list of variable names with corresponds to the complement of variable range
+     */
+    public abstract List<String> parseComplementVarNames(Frame df);
 }
 
-class VarRangeByName implements VarRange {
+final class VarRangeByValues extends VarRange {
 
-    public static final String DELIMITER = ",";
-    public static final String RANGE_SEPARATOR = "~";
-    public static final String ALL = "all";
     private final String rawColumnRange;
 
     /**
@@ -99,7 +198,7 @@ class VarRangeByName implements VarRange {
      *
      * @param indexes list of var indexes
      */
-    public VarRangeByName(int... indexes) {
+    public VarRangeByValues(int... indexes) {
         if (indexes == null || indexes.length == 0) {
             throw new IllegalArgumentException("No column indexes specified.");
         }
@@ -118,23 +217,10 @@ class VarRangeByName implements VarRange {
      *
      * @param ranges var ranges specified in string format
      */
-    public VarRangeByName(String... ranges) {
-        StringBuilder sb = new StringBuilder();
-        Arrays.stream(ranges).forEach(s -> {
-            if (sb.length() > 0)
-                sb.append(DELIMITER);
-            sb.append(s);
-        });
-        this.rawColumnRange = sb.toString();
+    public VarRangeByValues(String... ranges) {
+        this.rawColumnRange = String.join(DELIMITER, ranges);
     }
 
-    /**
-     * Apply a var range over a frame, obtaining the list of var indexes for that frame.
-     * If a variable is not found, than it will be omitted.
-     *
-     * @param df target frame
-     * @return a list of column indexes which corresponds to column range
-     */
     @Override
     public List<Integer> parseVarIndexes(Frame df) {
         List<Integer> colIndexes = new ArrayList<>();
@@ -193,17 +279,23 @@ class VarRangeByName implements VarRange {
 
     @Override
     public List<String> parseVarNames(Frame df) {
-        return parseVarIndexes(df).stream().map(i -> df.varNames()[i]).collect(Collectors.toList());
+        return parseVarIndexes(df).stream().map(i -> df.varNames()[i]).toList();
     }
 
     @Override
-    public List<String> parseInverseVarNames(Frame df) {
+    public List<String> parseComplementVarNames(Frame df) {
         Set<Integer> indexes = new HashSet<>(parseVarIndexes(df));
-        return IntStream.range(0, df.varCount()).filter(i -> !indexes.contains(i)).boxed().map(i -> df.rvar(i).name()).collect(Collectors.toList());
+        return IntStream.range(0, df.varCount()).filter(i -> !indexes.contains(i)).boxed().map(i -> df.rvar(i).name()).toList();
     }
 }
 
-record VarRangeByPredName(Predicate<String> predicate) implements VarRange {
+class VarRangeByPredName extends VarRange {
+
+    private final Predicate<String> predicate;
+
+    public VarRangeByPredName(Predicate<String> predicate) {
+        this.predicate = predicate;
+    }
 
     @Override
     public List<Integer> parseVarIndexes(Frame df) {
@@ -221,14 +313,20 @@ record VarRangeByPredName(Predicate<String> predicate) implements VarRange {
     }
 
     @Override
-    public List<String> parseInverseVarNames(Frame df) {
+    public List<String> parseComplementVarNames(Frame df) {
         return df.varStream().map(Var::name)
                 .filter(name -> !predicate.test(name))
                 .collect(Collectors.toList());
     }
 }
 
-record VarRangeByPred(Predicate<Var> predicate) implements VarRange {
+class VarRangeByPred extends VarRange {
+
+    private final Predicate<Var> predicate;
+
+    public VarRangeByPred(Predicate<Var> predicate) {
+        this.predicate = predicate;
+    }
 
     @Override
     public List<Integer> parseVarIndexes(Frame df) {
@@ -247,7 +345,7 @@ record VarRangeByPred(Predicate<Var> predicate) implements VarRange {
     }
 
     @Override
-    public List<String> parseInverseVarNames(Frame df) {
+    public List<String> parseComplementVarNames(Frame df) {
         return df.varStream()
                 .filter(var -> !predicate.test(var))
                 .map(Var::name)
